--- a/css/bootstrap-4.0.0/scss/bootstrap-reboot.css
+++ b/css/bootstrap-4.0.0/scss/bootstrap-reboot.css
@@ -20,7 +20,6 @@ html {
 
 @-ms-viewport {
   width: device-width; }
-
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
 
@@ -32,7 +31,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background-color: white; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
