--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,286 +1,73 @@
 /* ---------- Customizin Bootstrap 4 Variables --------- */
 $white: #fff;
+$blue: #4EA1D3;
+$red: #EC4964;
 $grid-gutter-width:     32px !default;
 $container-max-widths:  (sm: 544px, md: 736px, lg: 960px, xl: 1168px) !default;
-$purple:  #3E3C96 !default;
-$yellow: #FAC75C !default;
-$link-color:                        $purple;
-$btn-border-radius:                 0px !default;
-$btn-border-radius-lg:              0px !default;
-$btn-border-radius-sm:              0px !default;
+$link-color:                        #4EA1D3;
+$btn-border-radius:                 4px !default;
+$btn-border-radius-lg:              8px !default;
+$btn-border-radius-sm:              2px !default;
 $input-btn-padding-y:               .53rem !default;
 $input-btn-padding-x:               1.5rem !default;
-$navbar-dark-color:                 $white !default;
-$navbar-dark-hover-color:           $white !default;
-$navbar-dark-active-color:          $white !default;
-$navbar-nav-link-padding-x:         1rem !default;
-$navbar-toggler-padding-y:          0 !default;
-$navbar-toggler-padding-x:          0 !default;
-$navbar-toggler-font-size:          20px !default;
-$navbar-toggler-border-radius:      0 !default;
-$navbar-dark-toggler-border-color:  transparent !default;
-$navbar-light-toggler-border-color: transparent !default;
-$table-cell-padding:                1.5rem !default;
-
-/* ---------- Sticky Footer --------- */
-
-html { position: relative; height: 100%;}
-
-body {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: red;
-}
-
-main {
-    flex: 1;
-    margin-top: 120px; /* This is to offset the sticky header */
-}
 
 /* ---------- Importing --------- */
 @import "bootstrap-4.0.0/scss/bootstrap.scss";
 @import "fontfaces.scss";
 
+/* ---------- Sticky Footer --------- */
+
 body {
-   font-family: 'A';
-   font-weight: 400;
-   font-style: normal;
 }
 
 .navbar {
-    min-height: 80px;
-    background-image: linear-gradient(-90deg, #9F349D 0%, #3E3D96 100%);
+    min-height: 128px;
+    border-bottom: 1px solid #F5F5F5;
+}
+
+a.nav-link {
+    font: 400 22px/1 'Calibre';
+    line-height: 1;
+    color: #333;
+}
+
+a.nav-link:hover {
+    color: $primary;
+}
+
+.navbar-expand-md .navbar-nav .nav-link {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
 
 @media (max-width: 374px) {
-    .navbar-brand img {
-        max-width: 240px;
-    }
+
 }
 
-.nav-link {
-    font-size: 18px;
-    letter-spacing: 0.4px;
-}
-
-@media (max-width: 767px) {
-    /* All this nonsense to align the icons horizontally when on mobile... */
-    .navbar-nav {
-        flex-direction: row;
-        display: block;
-        text-align: center;
-    }
-
-    .navbar-item {
-        flex-direction: column;
-        display: flex;
-    }
-
-    .navbar-nav > li {
-        display: block;
-    }
-
-    .nav-image, .navbar-nav > .nav-image {
-        display: inline-block;
-        text-align: center;
-        margin-left: 12px;
-        margin-right: 12px;
-    }
-    /* ...end of nonsense. */
-}
-
-.nav-wrap {
-    max-width: 960px;
-}
-
-footer {
-    font-family: 'SFM';
-    font-size: 11px;
-    color: #222222;
-    letter-spacing: 0.22px;
-    margin-bottom: 16px;
-}
-
-h1,
-.post h2 {
-    font-family: 'SFM';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    color: #3E3C96;
-    letter-spacing: -0.4px;
-    margin-bottom: 16px;
-}
-
-h1.post-detail {
+.hero {
+    min-height: 566px;
+    text-align: center;
+    font-size: 64px;
     color: #333;
-}
-
-h1 a,
-h1 a:link,
-h1 a:hover {
-    color: $purple;
-}
-
-h2 {
-    font-family: 'SFM';
-    font-weight: normal;
+    line-height: 80px;
+    font-family: 'Tiempos Headline';
+    font-weight: 600;
     font-style: normal;
-    font-size: 16px;
-    color: #222222;
-    letter-spacing: 0.32px;
-    margin-bottom: 16px;
+    padding-top: 128px;
 }
 
-h3 {
-    margin-top: 4px;
-    font-size: 1.0625rem;
-    color: #222222;
-    letter-spacing: 0;
-    line-height: 1.4;
+.primary {
+    color: $primary;
 }
 
-h4 {
-    font-size: 1em;
+.flag-follow {
+    position: relative;
 }
 
-h5 {
-    font-size: .8em;
-}
-
-h6 {
-    font-size: .67em;
-}
-
-.btn {
-    font-family: 'SFM';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 14px;
-    color: #000000;
-    letter-spacing: 0.2px;
-}
-
-.btn-warning {
-    background-color: $yellow;
-}
-
-.posts-wrap {
-    max-width: 768px;
-}
-
-.post-info {
-    font-family: 'SFM';
-    font-weight: 400;
-    font-style: normal;
-    font-size: 11px;
-    color: #999999;
-    letter-spacing: 0.22px;
-    text-transform: uppercase;
-    line-height: 1;
-    margin-bottom: 1rem;
-}
-
-#aboutme .post-info {
-    text-transform: none;
-    margin-bottom: 2rem;
-    color: #222;
-}
-
-.post-info > .list-inline-item {
-    margin-right: 1rem;
-}
-
-@media (max-width: 767px) {
-    .post-info > .list-inline-item {
-        margin-bottom: .75rem;
-    }
-
-    #aboutme .post-info {
-        margin-bottom: .75rem;
-    }
-}
-
-.info-highlight {
-    color: $purple;
-}
-
-article.post {
-    padding-bottom: 16px;
-    margin-bottom: 32px;
-    border-bottom: 1px solid #EEEEEE;
-    font-family: 'A';
-    font-size: 15px;
-    color: #222222;
-    letter-spacing: 0;
-    line-height: 1.4rem;
-}
-
-article.post img {
-    width: 100%;
-}
-
-pre {
-    background-color: #f5f5f5;
-    padding: 8px 16px;
-    font-size: 12px;
-    line-height: 1.3;
-}
-
-table {
-    font-size: 14px;
-    margin-bottom: 16px;
-}
-
-table {
-    border: 1px solid #eee;
-}
-
-th {
-    padding: 4px 12px 2px;
-    text-transform: uppercase;
-    border-bottom: 1px solid #eee;
-    font-size: 13px;
-}
-
-td {
-    padding: 4px 12px;
-    font-family: 'SFM';
-    font-size: 12px;
-    line-height: 1.2;
-}
-
-.divider {
-    border-bottom: 1px solid #EEEEEE;
-    width: 100%;
-    display: block;
-    height: 1px;
-    margin-bottom: 32px;
-}
-
-#aboutme p {
-    font-size: 18px;
-}
-
-#mycv p {
-    font-size: 15px;
-    line-height: 1.6;
-}
-
-#mycv h2 {
-    border-top: 1px solid #EEEEEE;
-    margin-bottom: 1rem;
-    padding-top: 1.25rem;
-}
-
-#mycv h2:first-of-type {
-    border: none;
-}
-
-#mycv h2 a,
-#mycv h3 a,
-#mycv h4 a,
-#mycv h5 a {
-    color: #333;
+.flag-follow > .flag {
+    position: absolute;
+    left: 50%;
+    margin-left: -12px;
+    top: -2px;
+    transform: rotate(-12deg);
 }
