--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,9 +15,10 @@ $input-btn-padding-x:               1.5rem !default;
 @import "bootstrap-4.0.0/scss/bootstrap.scss";
 @import "fontfaces.scss";
 
-/* ---------- Sticky Footer --------- */
-
 body {
+    font-family: 'Calibre';
+    font-weight: 400;
+    font-style: normal;
 }
 
 .navbar {
@@ -26,7 +27,10 @@ body {
 }
 
 a.nav-link {
-    font: 400 22px/1 'Calibre';
+    font-family: 'Calibre';
+    font-weight: 400;
+    font-style: normal;
+    font-size: 22px;
     line-height: 1;
     color: #333;
 }
@@ -46,18 +50,12 @@ a.nav-link:hover {
 
 .hero {
     min-height: 566px;
-    text-align: center;
-    font-size: 64px;
     color: #333;
-    line-height: 80px;
-    font-family: 'Tiempos Headline';
-    font-weight: 600;
-    font-style: normal;
     padding-top: 128px;
-}
-
-.primary {
-    color: $primary;
+    font-size: 24px;
+    color: #333333;
+    letter-spacing: 0.1px;
+    line-height: 30px;
 }
 
 .flag-follow {
@@ -68,6 +66,111 @@ a.nav-link:hover {
     position: absolute;
     left: 50%;
     margin-left: -12px;
-    top: -2px;
+    top: -4px;
     transform: rotate(-12deg);
+}
+
+h1 {
+    font-size: 64px;
+    line-height: 80px;
+    font-family: 'Tiempos Headline';
+    font-weight: 600;
+    font-style: normal;
+    margin-bottom: 48px;
+}
+
+h2 {
+    font-weight: 600;
+    font-style: normal;
+    font-size: 28px;
+    color: #4EA1D3;
+    letter-spacing: 0.12px;
+    line-height: 30px;
+    margin-bottom: 16px;
+}
+
+@media (max-width: 768px) {
+    .hero {
+        padding-top: 80px;
+    }
+
+    h1 {
+        font-size: 56px;
+        line-height: 72px;
+    }
+}
+
+@media (max-width: 576px) {
+    .hero {
+        padding-top: 72px;
+    }
+
+    h1 {
+        font-size: 48px;
+        line-height: 64px;
+        text-align: center;
+    }
+
+    .flag-follow > .flag {
+        margin-left: -10px;
+        top: -10px;
+    }
+}
+
+@media (max-width: 375px) {
+    .hero {
+        padding-top: 64px;
+    }
+
+    h1 {
+        font-size: 40px;
+        line-height: 52px;
+    }
+}
+
+.primary {
+    color: $primary;
+}
+
+.event {
+    background: #F1F9FC;
+    min-height: 400px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
+dl,
+dd {
+    font-size: 20px;
+    color: #555555;
+    line-height: 24px;
+    font-weight: normal;
+    font-style: normal;
+    margin-bottom: 16px;
+}
+
+dt {
+    font-weight: 600;
+    margin-bottom: 4px;
+}
+
+.btn {
+    line-height: 1;
+    font-weight: 600;
+    font-size: 18px;
+    color: #FFFFFF;
+    padding: 12px 24px 8px;
+}
+
+.media {
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.media-body {
+    margin-top: 24px;
+}
+
+.media img {
+    max-width: 112px;
 }
