--- a/css/fontfaces.scss
+++ b/css/fontfaces.scss
@@ -94,31 +94,31 @@
     font-style: normal;
 }
 
-// @font-face {
-//     font-family: 'Tiempos Headline';
-//     src: url('../fonts/TiemposHeadline-Medium.eot');
-//     src: local('Tiempos Headline Medium'), local('TiemposHeadline-Medium'),
-//         url('../fonts/TiemposHeadline-Medium.eot?#iefix') format('embedded-opentype'),
-//         url('../fonts/TiemposHeadline-Medium.woff2') format('woff2'),
-//         url('../fonts/TiemposHeadline-Medium.woff') format('woff'),
-//         url('../fonts/TiemposHeadline-Medium.ttf') format('truetype'),
-//         url('../fonts/TiemposHeadline-Medium.svg#TiemposHeadline-Medium') format('svg');
-//     font-weight: 500;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'Tiempos Headline';
+    src: url('../fonts/TiemposHeadline-Medium.eot');
+    src: local('Tiempos Headline Medium'), local('TiemposHeadline-Medium'),
+        url('../fonts/TiemposHeadline-Medium.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/TiemposHeadline-Medium.woff2') format('woff2'),
+        url('../fonts/TiemposHeadline-Medium.woff') format('woff'),
+        url('../fonts/TiemposHeadline-Medium.ttf') format('truetype'),
+        url('../fonts/TiemposHeadline-Medium.svg#TiemposHeadline-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
 
-// @font-face {
-//     font-family: 'Tiempos Headline';
-//     src: url('../fonts/TiemposHeadline-Semibold.eot');
-//     src: local('Tiempos Headline Semibold'), local('TiemposHeadline-Semibold'),
-//         url('../fonts/TiemposHeadline-Semibold.eot?#iefix') format('embedded-opentype'),
-//         url('../fonts/TiemposHeadline-Semibold.woff2') format('woff2'),
-//         url('../fonts/TiemposHeadline-Semibold.woff') format('woff'),
-//         url('../fonts/TiemposHeadline-Semibold.ttf') format('truetype'),
-//         url('../fonts/TiemposHeadline-Semibold.svg#TiemposHeadline-Semibold') format('svg');
-//     font-weight: 600;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'Tiempos Headline';
+    src: url('../fonts/TiemposHeadline-Semibold.eot');
+    src: local('Tiempos Headline Semibold'), local('TiemposHeadline-Semibold'),
+        url('../fonts/TiemposHeadline-Semibold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/TiemposHeadline-Semibold.woff2') format('woff2'),
+        url('../fonts/TiemposHeadline-Semibold.woff') format('woff'),
+        url('../fonts/TiemposHeadline-Semibold.ttf') format('truetype'),
+        url('../fonts/TiemposHeadline-Semibold.svg#TiemposHeadline-Semibold') format('svg');
+    font-weight: 600;
+    font-style: normal;
+}
 
 @font-face {
     font-family: 'Tiempos Headline';
@@ -128,7 +128,7 @@
         url('../fonts/TiemposHeadline-Bold.woff') format('woff'),
         url('../fonts/TiemposHeadline-Bold.ttf') format('truetype'),
         url('../fonts/TiemposHeadline-Bold.svg#TiemposHeadline-Bold') format('svg');
-    font-weight: 600;
+    font-weight: 700;
     font-style: normal;
 }
 
@@ -170,31 +170,31 @@
     font-style: italic;
 }
 
-// @font-face {
-//     font-family: 'Tiempos Headline';
-//     src: url('../fonts/TiemposHeadline-MediumItalic.eot');
-//     src: local('Tiempos Headline Medium Italic'), local('TiemposHeadline-MediumItalic'),
-//         url('../fonts/TiemposHeadline-MediumItalic.eot?#iefix') format('embedded-opentype'),
-//         url('../fonts/TiemposHeadline-MediumItalic.woff2') format('woff2'),
-//         url('../fonts/TiemposHeadline-MediumItalic.woff') format('woff'),
-//         url('../fonts/TiemposHeadline-MediumItalic.ttf') format('truetype'),
-//         url('../fonts/TiemposHeadline-MediumItalic.svg#TiemposHeadline-MediumItalic') format('svg');
-//     font-weight: 500;
-//     font-style: italic;
-// }
+@font-face {
+    font-family: 'Tiempos Headline';
+    src: url('../fonts/TiemposHeadline-MediumItalic.eot');
+    src: local('Tiempos Headline Medium Italic'), local('TiemposHeadline-MediumItalic'),
+        url('../fonts/TiemposHeadline-MediumItalic.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/TiemposHeadline-MediumItalic.woff2') format('woff2'),
+        url('../fonts/TiemposHeadline-MediumItalic.woff') format('woff'),
+        url('../fonts/TiemposHeadline-MediumItalic.ttf') format('truetype'),
+        url('../fonts/TiemposHeadline-MediumItalic.svg#TiemposHeadline-MediumItalic') format('svg');
+    font-weight: 500;
+    font-style: italic;
+}
 
-// @font-face {
-//     font-family: 'Tiempos Headline';
-//     src: url('../fonts/TiemposHeadline-SemiboldItalic.eot');
-//     src: local('Tiempos Headline Semibold Italic'), local('TiemposHeadline-SemiboldItalic'),
-//         url('../fonts/TiemposHeadline-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
-//         url('../fonts/TiemposHeadline-SemiboldItalic.woff2') format('woff2'),
-//         url('../fonts/TiemposHeadline-SemiboldItalic.woff') format('woff'),
-//         url('../fonts/TiemposHeadline-SemiboldItalic.ttf') format('truetype'),
-//         url('../fonts/TiemposHeadline-SemiboldItalic.svg#TiemposHeadline-SemiboldItalic') format('svg');
-//     font-weight: 600;
-//     font-style: italic;
-// }
+@font-face {
+    font-family: 'Tiempos Headline';
+    src: url('../fonts/TiemposHeadline-SemiboldItalic.eot');
+    src: local('Tiempos Headline Semibold Italic'), local('TiemposHeadline-SemiboldItalic'),
+        url('../fonts/TiemposHeadline-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/TiemposHeadline-SemiboldItalic.woff2') format('woff2'),
+        url('../fonts/TiemposHeadline-SemiboldItalic.woff') format('woff'),
+        url('../fonts/TiemposHeadline-SemiboldItalic.ttf') format('truetype'),
+        url('../fonts/TiemposHeadline-SemiboldItalic.svg#TiemposHeadline-SemiboldItalic') format('svg');
+    font-weight: 600;
+    font-style: italic;
+}
 
 @font-face {
     font-family: 'Tiempos Headline';
@@ -205,7 +205,7 @@
         url('../fonts/TiemposHeadline-BoldItalic.woff') format('woff'),
         url('../fonts/TiemposHeadline-BoldItalic.ttf') format('truetype'),
         url('../fonts/TiemposHeadline-BoldItalic.svg#TiemposHeadline-BoldItalic') format('svg');
-    font-weight: 600;
+    font-weight: 700;
     font-style: italic;
 }
 
