--- a/css/styles.css
+++ b/css/styles.css
@@ -1373,7 +1373,7 @@ pre {
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.53rem 1.5rem;
+  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   color: #555555;
@@ -1399,7 +1399,7 @@ pre {
     opacity: 1; }
 
 select.form-control:not([size]):not([multiple]) {
-  height: calc(2.56rem + 2px); }
+  height: calc(2.25rem + 2px); }
 select.form-control:focus::-ms-value {
   color: #555555;
   background-color: white; }
@@ -1410,8 +1410,8 @@ select.form-control:focus::-ms-value {
   width: 100%; }
 
 .col-form-label {
-  padding-top: calc(0.53rem + 1px);
-  padding-bottom: calc(0.53rem + 1px);
+  padding-top: calc(0.375rem + 1px);
+  padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
   font-size: inherit;
   line-height: 1.5; }
@@ -1431,8 +1431,8 @@ select.form-control:focus::-ms-value {
 .form-control-plaintext {
   display: block;
   width: 100%;
-  padding-top: 0.53rem;
-  padding-bottom: 0.53rem;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
   margin-bottom: 0;
   line-height: 1.5;
   background-color: transparent;
@@ -1720,7 +1720,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   vertical-align: middle;
   user-select: none;
   border: 1px solid transparent;
-  padding: 0.53rem 1.5rem;
+  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 4px;
@@ -2324,8 +2324,8 @@ tbody.collapse.show {
   border-bottom-left-radius: 0; }
 
 .dropdown-toggle-split {
-  padding-right: 1.125rem;
-  padding-left: 1.125rem; }
+  padding-right: 0.5625rem;
+  padding-left: 0.5625rem; }
   .dropdown-toggle-split::after {
     margin-left: 0; }
 
@@ -2441,7 +2441,7 @@ tbody.collapse.show {
 .input-group-text {
   display: flex;
   align-items: center;
-  padding: 0.53rem 1.5rem;
+  padding: 0.375rem 0.75rem;
   margin-bottom: 0;
   font-size: 1rem;
   font-weight: 400;
@@ -2553,7 +2553,7 @@ tbody.collapse.show {
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.56rem + 2px);
+  height: calc(2.25rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
   color: #555555;
@@ -2596,14 +2596,14 @@ tbody.collapse.show {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(2.56rem + 2px);
+  height: calc(2.25rem + 2px);
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(2.56rem + 2px);
+  height: calc(2.25rem + 2px);
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-control {
@@ -2620,8 +2620,8 @@ tbody.collapse.show {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(2.56rem + 2px);
-  padding: 0.53rem 1.5rem;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
   line-height: 1.5;
   color: #555555;
   background-color: white;
@@ -2634,8 +2634,8 @@ tbody.collapse.show {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: calc(calc(2.56rem + 2px) - 1px * 2);
-    padding: 0.53rem 1.5rem;
+    height: calc(calc(2.25rem + 2px) - 1px * 2);
+    padding: 0.375rem 0.75rem;
     line-height: 1.5;
     color: #555555;
     content: "Browse";
@@ -3665,7 +3665,7 @@ button.close {
   pointer-events: auto;
   background-color: white;
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid transparent;
   border-radius: 0.3rem;
   outline: 0; }
 
@@ -3676,23 +3676,23 @@ button.close {
   bottom: 0;
   left: 0;
   z-index: 1040;
-  background-color: black; }
+  background-color: #333333; }
   .modal-backdrop.fade {
     opacity: 0; }
   .modal-backdrop.show {
-    opacity: 0.5; }
+    opacity: 0.8; }
 
 .modal-header {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 1.5rem;
   border-bottom: 1px solid #eeeeee;
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem; }
   .modal-header .close {
-    padding: 1rem;
-    margin: -1rem -1rem -1rem auto; }
+    padding: 1.5rem;
+    margin: -1.5rem -1.5rem -1.5rem auto; }
 
 .modal-title {
   margin-bottom: 0;
@@ -3701,13 +3701,13 @@ button.close {
 .modal-body {
   position: relative;
   flex: 1 1 auto;
-  padding: 1rem; }
+  padding: 1.5rem; }
 
 .modal-footer {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 1rem;
+  padding: 1.5rem;
   border-top: 1px solid #eeeeee; }
   .modal-footer > :not(:first-child) {
     margin-left: .25rem; }
@@ -3723,17 +3723,17 @@ button.close {
 
 @media (min-width: 576px) {
   .modal-dialog {
-    max-width: 500px;
+    max-width: 480px;
     margin: 1.75rem auto; }
 
   .modal-dialog-centered {
     min-height: calc(100% - (1.75rem * 2)); }
 
   .modal-sm {
-    max-width: 300px; } }
+    max-width: 320px; } }
 @media (min-width: 992px) {
   .modal-lg {
-    max-width: 800px; } }
+    max-width: 960px; } }
 .tooltip {
   position: absolute;
   z-index: 1070;
@@ -8039,11 +8039,12 @@ dt {
 .btn {
   line-height: 1;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 18px;
   color: #FFFFFF;
   padding: 12px 24px 8px; }
 
 .btn-lg, .btn-group-lg > .btn {
+  font-size: 20px;
   padding: 16px 24px 10px; }
 
 .media {
@@ -8068,8 +8069,8 @@ dt {
     text-align: center; } }
 .dl-lg dt {
   font-family: 'Tiempos';
-  font-weight: 800;
-  font-size: 24px;
+  font-weight: 600;
+  font-size: 26px;
   color: #333333;
   letter-spacing: 0.1px;
   line-height: 30px;
@@ -8082,7 +8083,7 @@ dt {
   line-height: 30px;
   font-weight: normal;
   font-style: normal;
-  margin-bottom: 16px; }
+  margin-bottom: 24px; }
 
 .content-page {
   font-size: 20px;
@@ -8133,3 +8134,44 @@ dt {
   margin-left: -18px;
   bottom: -10px;
   transform: rotate(-12deg); }
+
+.modal-header {
+  padding: 22px 24px 13px; }
+
+.close {
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: normal;
+  vertical-align: bottom;
+  opacity: .75; }
+
+.modal-content {
+  font-size: 16px;
+  line-height: 1.25;
+  color: #333333;
+  letter-spacing: 0.19px; }
+
+.modal-footer {
+  padding: 1rem 1.5rem;
+  justify-content: center; }
+
+.modal-title {
+  font-size: 24px;
+  font-weight: 600;
+  color: #333333; }
+
+.form-group {
+  margin-bottom: .5rem; }
+
+.form-group label {
+  font-weight: 600;
+  font-size: 20px;
+  color: #555555; }
+
+.form-control {
+  font-size: 17px;
+  line-height: 20px;
+  padding: 12px 12px 6px; }
+
+.form-control::-webkit-input-placeholder {
+  color: #cccccc; }
