--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,8 +35,15 @@ $navbar-light-toggler-border-color: transparent;
 $btn-border-radius:                 4px !default;
 $btn-border-radius-lg:              4px !default;
 $btn-border-radius-sm:              2px !default;
-$input-btn-padding-y:               .53rem !default;
-$input-btn-padding-x:               1.5rem !default;
+
+$modal-content-border-color:        transparent !default;
+$modal-backdrop-bg:                 $gray-800 !default;
+$modal-backdrop-opacity:            .8 !default;
+$modal-inner-padding:               1.5rem !default;
+$modal-header-padding:              1.5rem !default;
+$modal-lg:                          960px !default;
+$modal-md:                          480px !default;
+$modal-sm:                          320px !default;
 
 /* ---------- Importing --------- */
 @import "bootstrap-4.0.0/scss/bootstrap.scss";
@@ -229,12 +236,13 @@ dt {
 .btn {
     line-height: 1;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 18px;
     color: #FFFFFF;
     padding: 12px 24px 8px;
 }
 
 .btn-lg {
+    font-size: 20px;
     padding: 16px 24px 10px;
 }
 
@@ -268,8 +276,8 @@ dt {
 .dl-lg {
     dt {
         font-family: 'Tiempos';
-        font-weight: 800;
-        font-size: 24px;
+        font-weight: 600;
+        font-size: 26px;
         color: #333333;
         letter-spacing: 0.1px;
         line-height: 30px;
@@ -284,7 +292,7 @@ dt {
         line-height: 30px;
         font-weight: normal;
         font-style: normal;
-        margin-bottom: 16px;
+        margin-bottom: 24px;
     }
 }
 
@@ -347,4 +355,54 @@ dt {
     margin-left: -18px;
     bottom: -10px;
     transform: rotate(-12deg);
+}
+
+.modal-header {
+    padding: 22px 24px 13px;
+}
+
+.close {
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: normal;
+    vertical-align: bottom;
+    opacity: .75;
+}
+
+.modal-content {
+    font-size: 16px;
+    line-height: 1.25;
+    color: #333333;
+    letter-spacing: 0.19px;
+}
+
+.modal-footer {
+    padding: 1rem 1.5rem;
+    justify-content: center;
+}
+
+.modal-title {
+    font-size: 24px;
+    font-weight: 600;
+    color: #333333;
+}
+
+.form-group {
+    margin-bottom: .5rem;
+}
+
+.form-group label {
+    font-weight: 600;
+    font-size: 20px;
+    color: #555555;
+}
+
+.form-control {
+    font-size: 17px;
+    line-height: 20px;
+    padding: 12px 12px 6px;
+}
+
+.form-control::-webkit-input-placeholder {
+    color: $gray-400;
 }
